--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -187,7 +187,7 @@ jobs:
         id: build-pytorch-wheels
         run: |
           echo "Building PyTorch wheels for ${{ inputs.amdgpu_family }}"
-          ./external-builds/pytorch/build_prod_wheels.py \
+          python ./external-builds/pytorch/build_prod_wheels.py \
             build \
             --install-rocm \
             --pip-cache-dir /tmp/pipcache \
@@ -195,8 +195,9 @@ jobs:
             --pytorch-git-ref "${{ inputs.pytorch_git_ref }}" \
             --python-version "${{ inputs.python_version }}" \
             --clean \
-            --output-dir ${{ env.PACKAGE_DIST_DIR }} ${{ env.optional_build_prod_arguments }}
-          python ./build_tools/github_actions/write_torch_versions.py --dist-dir ${{ env.PACKAGE_DIST_DIR }}
+            --output-dir "${{ env.PACKAGE_DIST_DIR }}" \
+            ${{ env.optional_build_prod_arguments }}
+          python ./build_tools/github_actions/write_torch_versions.py --dist-dir "${{ env.PACKAGE_DIST_DIR }}"
 
       - name: Sanity Check Wheel
         run: |
@@ -221,7 +222,9 @@ jobs:
           PY="${{ inputs.python_version }}"; PY="${PY#py}"
           TRACK="${{ inputs.pytorch_git_ref }}"; TRACK="${TRACK//\//-}"
           MANIFEST_NAME="therock-manifest_torch_py${PY}_${TRACK}.json"
-          ls -l "${PACKAGE_DIST_DIR}/manifests" || dir "${PACKAGE_DIST_DIR}\manifests"
+          echo "Manifest expected at: ${{ env.PACKAGE_DIST_DIR }}/manifests/${MANIFEST_NAME}"
+          ls -la "${{ env.PACKAGE_DIST_DIR }}/manifests" || true
+          test -f "${{ env.PACKAGE_DIST_DIR }}/manifests/${MANIFEST_NAME}"
           aws s3 cp \
             "${{ env.PACKAGE_DIST_DIR }}/manifests/${MANIFEST_NAME}" \
             "s3://${{ env.S3_BUCKET_ARTIFACTS }}/${{ github.run_id }}-linux/manifests/${{ inputs.amdgpu_family }}/${MANIFEST_NAME}"
