Add SDK python requirements for building

--- a/.github/workflows/multi_arch_build_portable_linux.yml
+++ b/.github/workflows/multi_arch_build_portable_linux.yml
@@ -101,6 +101,9 @@ jobs:
         timeout-minutes: 30
         run: ./build_tools/fetch_sources.py --stage ${STAGE_NAME} --jobs 12 --depth 1
 
+      - name: Install external python deps
+        run: pip install -r requirements-external.txt
+
       - name: Get stage configuration
         id: stage_config
         run: |
@@ -204,6 +207,9 @@ jobs:
       - name: Fetch sources
         timeout-minutes: 30
         run: ./build_tools/fetch_sources.py --stage ${STAGE_NAME} --jobs 12 --depth 1
+
+      - name: Install external python deps
+        run: pip install -r requirements-external.txt
 
       - name: Get stage configuration
         id: stage_config
@@ -314,6 +320,9 @@ jobs:
       - name: Fetch sources
         timeout-minutes: 30
         run: ./build_tools/fetch_sources.py --stage ${STAGE_NAME} --jobs 12 --depth 1
+
+      - name: Install external python deps
+        run: pip install -r requirements-external.txt
 
       - name: Get stage configuration
         id: stage_config
@@ -427,6 +436,9 @@ jobs:
         timeout-minutes: 30
         run: ./build_tools/fetch_sources.py --stage ${STAGE_NAME} --jobs 12 --depth 1
 
+      - name: Install external python deps
+        run: pip install -r requirements-external.txt
+
       - name: Get stage configuration
         id: stage_config
         run: |
@@ -533,6 +545,9 @@ jobs:
         timeout-minutes: 30
         run: ./build_tools/fetch_sources.py --stage ${STAGE_NAME} --jobs 12 --depth 1
 
+      - name: Install external python deps
+        run: pip install -r requirements-external.txt
+
       - name: Get stage configuration
         id: stage_config
         run: |
@@ -637,6 +652,9 @@ jobs:
         timeout-minutes: 30
         run: ./build_tools/fetch_sources.py --stage ${STAGE_NAME} --jobs 12 --depth 1
 
+      - name: Install external python deps
+        run: pip install -r requirements-external.txt
+
       - name: Get stage configuration
         id: stage_config
         run: |
@@ -740,6 +758,9 @@ jobs:
       - name: Fetch sources
         timeout-minutes: 30
         run: ./build_tools/fetch_sources.py --stage ${STAGE_NAME} --jobs 12 --depth 1
+
+      - name: Install external python deps
+        run: pip install -r requirements-external.txt
 
       - name: Get stage configuration
         id: stage_config
