Add repository_override and projects parameters for external repo testing
This commit adds comprehensive support for testing external repository CI
integration directly from TheRock, enabling automated regression testing.

Key Features:
1. repository_override parameter - Allows testing external repo scenarios
   from TheRock by overriding github.repository detection
2. projects parameter - Allows overriding project detection for targeted
   testing (comma-separated format)
3. Automated PR testing - New workflow runs automatically on CI file changes
4. Input validation - Prevents misuse of repository_override

Changes:

Workflows:
- ci.yml: Added repository_override and projects inputs
- setup.yml: Added validation, fixed checkout to use override,
  passes parameters as env vars (GITHUB_REPOSITORY_OVERRIDE, PROJECTS)
- ci_linux.yml/ci_windows.yml: Pass through parameters
- build_portable_linux_artifacts.yml: Use override in detection,
  added repository_override input
- build_windows_artifacts.yml: Use override in detection,
  added repository_override input
- test_external_repo_integration.yml: NEW - Automated testing workflow
  with PR trigger and separate project inputs per repo

Scripts:
- configure_ci.py: Check GITHUB_REPOSITORY_OVERRIDE env var before
  path-based detection
- detect_external_projects.py: Changed to comma-separated format,
  projects input now acts as override (blank = auto-detect from files)

Other:
- .gitignore: Added CURSOR_SESSION.md exclusion

Testing:
- Automatic: Runs on PRs modifying CI infrastructure files
- Manual: workflow_dispatch with per-repo project overrides
- Projects input behavior:
  * Blank (default) = auto-detect from modified files
  * "all" = test all projects (override)
  * "proj1,proj2" = test specific projects (override)

This enables:
- Automated regression testing for external repo integration
- Targeted testing without CODEOWNERS issues
- Future PR automation for CI changes

Related: ROCm/rocm-libraries#3629, ROCm/ro

--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -57,6 +57,10 @@ on:
         type: string
         description: "TheRock git ref to use (for external repos)"
         default: ""
+      repository_override:
+        type: string
+        description: "Override github.repository for testing (e.g., 'ROCm/rocm-libraries')"
+        default: ""
 
 # See the details regarding permissions from the link:
 # https://github.com/aws-actions/configure-aws-credentials?tab=readme-ov-file#oidc
@@ -106,7 +110,7 @@ jobs:
       - name: Auto-detect external source configuration
         if: ${{ inputs.external_source_checkout }}
         id: detect
-        run: python3 $THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py "${{ github.repository }}" --workspace "${{ github.workspace }}"
+        run: python3 $THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py "${{ inputs.repository_override || github.repository }}" --workspace "${{ github.workspace }}"
 
       - name: Checkout composable_kernel repository
         if: ${{ inputs.external_source_checkout && steps.detect.outputs.enable_ck == 'true' }}
