--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -18,6 +18,14 @@ on:
         type: string
         description: "TheRock git ref to use (for external repos)"
         default: ""
+      repository_override:
+        type: string
+        description: "Override github.repository for testing (e.g., 'ROCm/rocm-libraries')"
+        default: ""
+      projects:
+        type: string
+        description: "Override: comma-separated list of project paths (e.g., 'projects/rocprim,projects/hipcub'). Blank = auto-detect."
+        default: ""
     outputs:
       enable_build_jobs:
         description: Whether to enable build jobs.
@@ -60,9 +68,17 @@ jobs:
       windows_test_labels: ${{ steps.configure.outputs.windows_test_labels }}
       rocm_package_version: ${{ steps.rocm_package_version.outputs.rocm_package_version }}
     steps:
+      - name: Validate inputs
+        run: |
+          if [[ -n "${{ inputs.repository_override }}" && "${{ inputs.external_source_checkout }}" != "true" ]]; then
+            echo "ERROR: repository_override can only be used when external_source_checkout is true"
+            exit 1
+          fi
+      
       - name: Checkout repository
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
+          repository: ${{ inputs.external_source_checkout && inputs.repository_override || github.repository }}
           path: ${{ inputs.external_source_checkout && 'source-repo' || '.' }}
           fetch-depth: 2
 
@@ -72,7 +88,7 @@ jobs:
         with:
           repository: ROCm/TheRock
           path: TheRock
-          ref: ${{ inputs.therock_ref }}
+          ref: ${{ inputs.therock_ref || github.ref }}
 
       - name: Set PR_LABELS variable with labels assigned to pull request
         if: ${{ github.event.pull_request }} # only set PR labels var if this is a pull request
@@ -107,6 +123,8 @@ jobs:
           LOAD_TEST_RUNNERS_FROM_VAR: false
           BASE_REF: HEAD^
           GITHUB_EVENT_NAME: ${{ github.event_name }}
+          GITHUB_REPOSITORY_OVERRIDE: ${{ inputs.repository_override }}
+          PROJECTS: ${{ inputs.projects }}
         run: |
           if [[ "${{ inputs.external_source_checkout }}" == "true" ]]; then
             cd source-repo
