--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
       test_type: ${{ needs.setup.outputs.test_type }}
       sanity_check_only_for_family: ${{ matrix.variant.sanity_check_only_for_family == true }}
       monitor_memory: ${{ inputs.monitor_memory == true }}
-      monitor_interval: ${{ github.event_name == 'workflow_dispatch' && inputs.monitor_interval || fromJSON('30') }}
+      monitor_interval: ${{ toJSON(inputs.monitor_interval || fromJSON('30')) }}
     permissions:
       contents: read
       id-token: write
@@ -140,7 +140,7 @@ jobs:
       test_type: ${{ needs.setup.outputs.test_type }}
       sanity_check_only_for_family: ${{ matrix.variant.sanity_check_only_for_family == true }}
       monitor_memory: ${{ inputs.monitor_memory == true }}
-      monitor_interval: ${{ github.event_name == 'workflow_dispatch' && inputs.monitor_interval || fromJSON('30') }}
+      monitor_interval: ${{ toJSON(inputs.monitor_interval || fromJSON('30')) }}
     permissions:
       contents: read
       id-token: write
