--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,9 @@ on:
         description: "If enabled, memory monitoring will be performed during the build"
         default: false
       monitor_interval:
-        type: number
+        type: string
         description: "Memory monitoring interval in seconds"
-        default: 30
+        default: "30"
       windows_amdgpu_families:
         type: string
         description: "Insert comma-separated list of Windows GPU families to build and test. ex: gfx94X, gfx1201X"
@@ -106,7 +106,7 @@ jobs:
       test_type: ${{ needs.setup.outputs.test_type }}
       sanity_check_only_for_family: ${{ matrix.variant.sanity_check_only_for_family == true }}
       monitor_memory: ${{ inputs.monitor_memory == true }}
-      monitor_interval: ${{ toJSON(inputs.monitor_interval || fromJSON('30')) }}
+      monitor_interval: ${{ inputs.monitor_interval || '30' }}
     permissions:
       contents: read
       id-token: write
@@ -140,7 +140,7 @@ jobs:
       test_type: ${{ needs.setup.outputs.test_type }}
       sanity_check_only_for_family: ${{ matrix.variant.sanity_check_only_for_family == true }}
       monitor_memory: ${{ inputs.monitor_memory == true }}
-      monitor_interval: ${{ toJSON(inputs.monitor_interval || fromJSON('30')) }}
+      monitor_interval: ${{ inputs.monitor_interval || '30' }}
     permissions:
       contents: read
       id-token: write
