--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -36,8 +36,8 @@ on:
         type: boolean
         default: false
       monitor_interval:
-        type: number
-        default: 30
+        type: string
+        default: "30"
 
 permissions:
   contents: read
