Fix external repo CI integration for rocm-libraries and rocm-systems
Enables rocm-libraries and rocm-systems to use TheRock's CI infrastructure
via workflow_call, eliminating duplicate workflow definitions.

Key fixes:
- Remove REPOSITORY_OVERRIDE from artifact downloads (artifacts accessed via
  S3 paths, not GitHub API)
- Remove project prefix from artifact_group for external repos (artifact
  names don't include project prefix)
- Enable builds for workflow_dispatch from external repos
- Generate platform-specific configs in single detection pass
- Use composablekernel from rocm-libraries instead of TheRock submodule
- Update test coverage for external repo integration

External repo workflows call TheRock's ci.yml with external_source_checkout=true,
allowing them to leverage TheRock's build/test infrastructure while building
from their own source repositories.

--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -111,49 +111,6 @@ jobs:
           path: therock-ci
           ref: ${{ inputs.therock_ref || 'main' }}
 
-      - name: Verify TheRock checkout
-        if: ${{ inputs.external_source_checkout }}
-        run: |
-          echo "=== Verifying TheRock checkout ==="
-          echo "THEROCK_DIR: $THEROCK_DIR"
-          echo "Current working directory: $(pwd)"
-          echo ""
-          echo "=== Checking Python availability ==="
-          which python3 || echo "python3 not found"
-          which python || echo "python not found"
-          echo ""
-          echo "=== Directory listing of workspace root ==="
-          ls -la
-          echo ""
-          echo "=== Checking if TheRock directory exists ==="
-          if [ -d "$THEROCK_DIR" ]; then
-            echo "✓ TheRock directory exists"
-            echo ""
-            echo "=== Contents of TheRock directory ==="
-            ls -la $THEROCK_DIR/
-            echo ""
-            echo "=== Checking for build_tools directory ==="
-            if [ -d "$THEROCK_DIR/build_tools" ]; then
-              echo "✓ build_tools directory exists"
-              echo ""
-              echo "=== Checking for detect_external_repo_config.py ==="
-              if [ -f "$THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py" ]; then
-                echo "✓ detect_external_repo_config.py exists"
-              else
-                echo "✗ ERROR: detect_external_repo_config.py NOT FOUND"
-                echo "Contents of build_tools/github_actions/:"
-                ls -la $THEROCK_DIR/build_tools/github_actions/ || echo "Directory does not exist"
-                exit 1
-              fi
-            else
-              echo "✗ ERROR: build_tools directory NOT FOUND"
-              exit 1
-            fi
-          else
-            echo "✗ ERROR: TheRock directory NOT FOUND"
-            exit 1
-          fi
-
       - name: Install python deps
         run: |
           pip install -r $THEROCK_DIR/requirements.txt
@@ -161,24 +118,7 @@ jobs:
       - name: Auto-detect external source configuration
         if: ${{ inputs.external_source_checkout }}
         id: detect
-        run: python3 $THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py "${{ inputs.repository_override || github.repository }}"
-
-      - name: Debug detected configuration
-        if: ${{ inputs.external_source_checkout }}
-        run: |
-          echo "Detected cmake_source_var: ${{ steps.detect.outputs.cmake_source_var }}"
-          echo "Detected patches_dir: ${{ steps.detect.outputs.patches_dir }}"
-          echo "Detected fetch_exclusion: ${{ steps.detect.outputs.fetch_exclusion }}"
-          echo "GitHub workspace: ${{ github.workspace }}"
-          echo "Source repo will be at: ${{ github.workspace }}/source-repo"
-          echo "Will construct CMake option: -D${{ steps.detect.outputs.cmake_source_var }}=${{ github.workspace }}/source-repo"
-
-      - name: Checkout composable_kernel repository
-        if: ${{ inputs.external_source_checkout && steps.detect.outputs.enable_ck == 'true' }}
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-        with:
-          repository: "ROCm/composable_kernel"
-          path: "composable_kernel"
+        run: python3 $THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py "${{ inputs.repository_override || github.repository }}" --platform linux
 
       - name: Install python deps
         run: |
@@ -206,7 +146,7 @@ jobs:
         timeout-minutes: 30
         run: |
           if [[ "${{ inputs.external_source_checkout }}" == "true" ]]; then
-            $THEROCK_DIR/build_tools/fetch_sources.py --jobs 12 --no-include-ml-frameworks ${{ steps.detect.outputs.fetch_exclusion }}
+            $THEROCK_DIR/build_tools/fetch_sources.py --jobs 12 ${{ steps.detect.outputs.fetch_exclusion }}
           else
             $THEROCK_DIR/build_tools/fetch_sources.py --jobs 12
           fi
@@ -239,7 +179,11 @@ jobs:
             ${{ inputs.extra_cmake_options }}
           BUILD_DIR: build
         run: |
-          python3 $THEROCK_DIR/build_tools/github_actions/build_configure.py --manylinux
+          if [[ "${{ inputs.external_source_checkout }}" == "true" ]]; then
+            python3 $THEROCK_DIR/build_tools/github_actions/build_configure.py
+          else
+            python3 $THEROCK_DIR/build_tools/github_actions/build_configure.py --manylinux
+          fi
 
       - name: Build therock-archives and therock-dist
         run: |
@@ -290,9 +234,10 @@ jobs:
 
       - name: Post Build Upload
         if: always()
+        working-directory: ${{ inputs.external_source_checkout && env.THEROCK_DIR || '.' }}
         run: |
-          python3 $THEROCK_DIR/build_tools/github_actions/post_build_upload.py \
+          python3 ./build_tools/github_actions/post_build_upload.py \
             --run-id ${{ github.run_id }} \
             --artifact-group "${{ inputs.artifact_group }}" \
-            --build-dir $THEROCK_DIR/build \
+            --build-dir build \
             --upload
