--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,39 +47,34 @@ on:
         description: "If provided, the tests will run on this artifact ID"
         default: ""
   workflow_call:
+    # This workflow_call section allows external repositories (rocm-libraries, rocm-systems)
+    # to reuse this CI workflow for integration testing with TheRock's build infrastructure.
+    # All inputs are optional; for normal TheRock CI (workflow_dispatch/pull_request), these are unused.
     inputs:
       external_source_checkout:
         type: boolean
-        description: "Whether source is from external repo (rocm-libraries/systems)"
         default: false
+        description: "Whether source is from external repo (rocm-libraries/systems)"
       therock_ref:
         type: string
-        description: "TheRock git ref to use (for external repos)"
         default: ""
+        description: "TheRock git ref to use (for external repos)"
       repository_override:
         type: string
-        description: "Override github.repository for testing (e.g., 'ROCm/rocm-libraries')"
         default: ""
+        description: "Override github.repository for testing (e.g., 'ROCm/rocm-libraries')"
       projects:
         type: string
-        description: "Override: comma-separated list of project paths to test (e.g., 'projects/rocprim,projects/hipcub'). Leave blank for normal behavior (auto-detect from PR changes). Use 'all' to test all projects."
         default: ""
+        description: "Override: comma-separated list of project paths to test (e.g., 'projects/rocprim,projects/hipcub'). Leave blank for normal behavior (auto-detect from PR changes). Use 'all' to test all projects."
       linux_amdgpu_families:
         type: string
-        description: "Insert comma-separated list of Linux GPU families to build and test. ex: gfx94X, gfx1201X"
         default: ""
+        description: "Insert comma-separated list of Linux GPU families to build and test. ex: gfx94X, gfx1201X"
       windows_amdgpu_families:
         type: string
+        default: ""
         description: "Insert comma-separated list of Windows GPU families to build and test. ex: gfx94X, gfx1201X"
-        default: ""
-      linux_test_labels:
-        type: string
-        description: "Limit Linux tests to specific labels (e.g., 'test:rocprim,test:hipcub'). Blank = run all detected tests."
-        default: ""
-      windows_test_labels:
-        type: string
-        description: "Limit Windows tests to specific labels (e.g., 'test:rocprim,test:hipcub'). Blank = run all detected tests."
-        default: ""
   pull_request:
     types:
       - labeled
@@ -109,8 +104,6 @@ jobs:
       projects: ${{ inputs.projects || '' }}
       linux_amdgpu_families: ${{ inputs.linux_amdgpu_families || '' }}
       windows_amdgpu_families: ${{ inputs.windows_amdgpu_families || '' }}
-      linux_test_labels: ${{ inputs.linux_test_labels || '' }}
-      windows_test_labels: ${{ inputs.windows_test_labels || '' }}
 
   linux_build_and_test:
     name: Linux::${{ matrix.variant.family }}::${{ matrix.variant.build_variant_label }}
@@ -143,6 +136,8 @@ jobs:
       external_source_checkout: ${{ inputs.external_source_checkout || false }}
       therock_ref: ${{ inputs.therock_ref || '' }}
       repository_override: ${{ inputs.repository_override || '' }}
+      cmake_options: ${{ matrix.variant.cmake_options || '' }}
+      project_to_test: ${{ matrix.variant.project_to_test || '' }}
     permissions:
       contents: read
       id-token: write
@@ -177,6 +172,8 @@ jobs:
       external_source_checkout: ${{ inputs.external_source_checkout || false }}
       therock_ref: ${{ inputs.therock_ref || '' }}
       repository_override: ${{ inputs.repository_override || '' }}
+      cmake_options: ${{ matrix.variant.cmake_options || '' }}
+      project_to_test: ${{ matrix.variant.project_to_test || '' }}
     permissions:
       contents: read
       id-token: write
