--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -230,7 +230,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708 # v5.1.1
         with:
           aws-region: us-east-2
-          role-to-assume: arn:aws:iam::692859939525:role/therock-ci
+          role-to-assume: ${{ github.repository != 'ROCm/TheRock' && 'arn:aws:iam::692859939525:role/therock-ci-external' || 'arn:aws:iam::692859939525:role/therock-ci' }}
 
       - name: Post Build Upload
         if: always()
